--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <head>
   <title>Manav Babel</title>
+  <link rel="favicon" type = "image/ico" href = "favicon_io/favicon.ico">
 </head>
 
 <body>
