--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <link href="main.css" rel="stylesheet" />
+<script src="main.js"></script>
+
+<!--add maths and physics notes!-->
 
 <head>
-  <title>Manav Babel</title>
+  <title>MB</title>
   <link rel="favicon" type = "image/ico" href = "favicon_io/favicon.ico">
 </head>
 
@@ -13,22 +15,15 @@
 
   <header>
     <div id="Name">
-        <div id="NameText">Manav<span>&emsp14;</span>Babel</div>
+      <span id="NameText">Manav<span>&emsp14;</span>Babel</span>
+      <div id="NameBackground"></div>
     </div>
     <p id="Scroll">——— ⩔ ———</p>
   </header>
 
-  <nav>
+  <nav id="Nav">
     <ul>
       <li id="Sun"><a href="#">Misc</a></li>
-      <li id="Mercury"><a href="#">Misc</a></li>
-      <li id="Venus"><a href="#">Misc</a></li>
-      <li id="Earth"><a href="#">Misc</a></li>
-      <li id="Mars"><a href="#">Misc</a></li>
-      <li id="Jupiter"><a href="#">Misc</a></li>
-      <li id="Saturn"><a href="#">Misc</a></li>
-      <li id="Uranus"><a href="#">Misc</a></li>
-      <li id="Neptune"><a href="#">Misc</a></li>
     </ul>
   </nav>
 
@@ -57,6 +52,4 @@
     </div>
 
   </div>
-
-  <script src="main.js"></script>
 </body>
